1999-01-10  Tom Tromey  <tromey@cygnus.com>

	* Released version 1.4.

1999-01-10  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* missing (autoheader): accept multiple header files
	(automake): simplify sed processing

1999-01-10  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* automake.in (handle_configure, stamp_dir): create only one stamp
	file per header, instead of one in the top-level directory and one
	in the directory that contains the header.

1999-01-10  Tom Tromey  <tromey@cygnus.com>

	* automake.in (lang_objc_finish): Formatting fix.

	* automake.in (objc_extensions): New sub.
	(handle_dependencies): Only generate dependency-tracking code for
	ObjC when ObjC source seen.

1998-12-22  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* automake.in (handle_dependencies): Transform EXT & PFX in
	Objective C case.

1998-12-11  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* automake.in: Register Objective C language.
	(finish_languages): Consider Objective C to be non_c.
	(lang_objc_rewrite, lang_objc_finish): New functions.
	(resolve_linker): Recognize OBJCLINK before LINK.

1999-01-10  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_texinfo): Handle empty $config_aux_dir.

	* automake.in (handle_texinfo): Set $conf_pat correctly when
	config_aux_dir not used.
	(handle_texinfo): Run maintainer-clean-aminfo rules in srcdir.
	From Erez Zadok.
	* texi-vers.am (maintainer-clean-@VTI@): Prefix file names with
	$(srcdir).  From Erez Zadok.
	($(srcdir)/stamp-@VTI@): Don't run mdate-sh from srcdir.

1999-01-08  Thomas Tanner  <tanner@gmx.de>

	* depend.am: remove the dependencies (.deps)
	in "make distclean", not "make maintainer-clean"

1999-01-10  Tom Tromey  <tromey@cygnus.com>

	* aclocal.in (write_aclocal): Updated copyright.
	(parse_arguments): Likewise.
	* automake.in (parse_arguments): Updated copyright.
	(initialize_global_constants): Likewise.

	* Makefile.am (pkgdata_DATA): Renamed from pkgdata_SCRIPTS.