@@ -2,6 +2,8 @@
 
 	* Released version 1.4.
 
+	* Makefile.am (pkgdata_DATA): Removed duplicate definition.
+
 1999-01-10  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* missing (autoheader): accept multiple header files
